Fixed sub menu being hidden behind top menu

--- a/resources/scss/main/pages/_home.scss
+++ b/resources/scss/main/pages/_home.scss
@@ -48,7 +48,7 @@ main.page-home {
             background-color: $dark;
 
             left: 0;
-            top: 60px;
+            top: 75px;
             z-index: $zindex-sticky;
             position: fixed;
             width: 100%;
